feat: enable MoltenVK/Vulkan support for AMD GPUs on Intel Macs
- Add MoltenVK portability enumeration extension support for GPU detection on macOS
- Add macos-vulkan-x64 backend option for Intel Macs with AMD GPUs
- Add automatic MoltenVK download from Khronos releases when Vulkan backend selected
- Add is_moltenvk_installed command to check for MoltenVK library
- Add Apple vendor ID constant for GPU detection completeness
- Update documentation with new mac-vulkan backend option

This enables GPU-accelerated inference on Intel Macs with discrete AMD graphics
cards (e.g., Radeon Pro 5500M, 6300) via MoltenVK's Vulkan-to-Metal translation.

--- a/docs/src/pages/docs/desktop/llama-cpp-server.mdx
+++ b/docs/src/pages/docs/desktop/llama-cpp-server.mdx
@@ -99,10 +99,15 @@ Different backends are optimized for different hardware. Pick the one that match
 - `llama.cpp-mac-arm64` (recommended)
 
 ### Intel Macs
-- `llama.cpp-mac-amd64`
+- `llama.cpp-mac-amd64` (CPU only)
+- `llama.cpp-mac-vulkan` (AMD GPU acceleration via MoltenVK)
 
 <Callout type="info">
-Apple Silicon automatically uses GPU acceleration through Metal.
+Apple Silicon automatically uses GPU acceleration through Metal. No additional setup required.
+</Callout>
+
+<Callout type="warning">
+**Intel Macs with AMD GPUs**: The `mac-vulkan` backend enables GPU acceleration for Intel Macs with discrete AMD graphics cards (e.g., Radeon Pro 5500M). This uses MoltenVK to translate Vulkan calls to Metal. This feature is experimental.
 </Callout>
 
 </Tabs.Tab>
